[gd_scene load_steps=3 format=3 uid="uid://0x3mlxsex7eb"]

[ext_resource type="Script" path="res://addons/AsepriteWizard/interface/modals/aseprite_dock_imports_modal.gd" id="1_sfsod"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dq8di"]
content_margin_left = 2.0
content_margin_top = 2.0
content_margin_right = 2.0
content_margin_bottom = 2.0
bg_color = Color(0.09, 0.09, 0.09, 0.6)

[node name="AsepriteDockImports" type="Window"]
title = "Aseprite Imports"
initial_position = 1
size = Vector2i(600, 400)
wrap_controls = true
transient = true
min_size = Vector2i(600, 400)
script = ExtResource("1_sfsod")

[node name="Panel" type="Panel" parent="."]
custom_minimum_size = Vector2(600, 400)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
custom_minimum_size = Vector2(400, 300)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2

[node name="HSplitContainer" type="HSplitContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer/HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Tree" type="Tree" parent="Panel/MarginContainer/VBoxContainer/HSplitContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
hide_root = true
select_mode = 2

[node name="buttons" type="HFlowContainer" parent="Panel/MarginContainer/VBoxContainer/HSplitContainer/VBoxContainer"]
layout_mode = 2

[node name="expand_all" type="Button" parent="Panel/MarginContainer/VBoxContainer/HSplitContainer/VBoxContainer/buttons"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_dq8di")
text = "Expand All"

[node name="collapse_all" type="Button" parent="Panel/MarginContainer/VBoxContainer/HSplitContainer/VBoxContainer/buttons"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_dq8di")
text = "Collapse All"

[node name="MarginContainer" type="MarginContainer" parent="Panel/MarginContainer/VBoxContainer/HSplitContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer/HSplitContainer/MarginContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="Panel/MarginContainer/VBoxContainer/HSplitContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/MarginContainer/VBoxContainer/HSplitContainer/MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
text = "Details"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="Panel/MarginContainer/VBoxContainer/HSplitContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="nothing" type="Label" parent="Panel/MarginContainer/VBoxContainer/HSplitContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
text = "Nothing selected"
horizontal_alignment = 1

[node name="single_item" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer/HSplitContainer/MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2

[node name="GridContainer" type="GridContainer" parent="Panel/MarginContainer/VBoxContainer/HSplitContainer/MarginContainer/VBoxContainer/single_item"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/h_separation = 10
columns = 2

[node name="type_label" type="Label" parent="Panel/MarginContainer/VBoxContainer/HSplitContainer/MarginContainer/VBoxContainer/single_item/GridContainer"]
layout_mode = 2
text = "Type"

[node name="type_value" type="Label" parent="Panel/MarginContainer/VBoxContainer/HSplitContainer/MarginContainer/VBoxContainer/single_item/GridContainer"]
layout_mode = 2
text = "-"

[node name="name_label" type="Label" parent="Panel/MarginContainer/VBoxContainer/HSplitContainer/MarginContainer/VBoxContainer/single_item/GridContainer"]
layout_mode = 2
text = "Name"

[node name="name_value" type="Label" parent="Panel/MarginContainer/VBoxContainer/HSplitContainer/MarginContainer/VBoxContainer/single_item/GridContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
size_flags_horizontal = 3
text = "-"
autowrap_mode = 2

[node name="path_label" type="Label" parent="Panel/MarginContainer/VBoxContainer/HSplitContainer/MarginContainer/VBoxContainer/single_item/GridContainer"]
layout_mode = 2
text = "Path"

[node name="path_value" type="Label" parent="Panel/MarginContainer/VBoxContainer/HSplitContainer/MarginContainer/VBoxContainer/single_item/GridContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
size_flags_horizontal = 3
text = "-"
autowrap_mode = 1

[node name="HSeparator" type="HSeparator" parent="Panel/MarginContainer/VBoxContainer/HSplitContainer/MarginContainer/VBoxContainer/single_item/GridContainer"]
layout_mode = 2

[node name="HSeparator2" type="HSeparator" parent="Panel/MarginContainer/VBoxContainer/HSplitContainer/MarginContainer/VBoxContainer/single_item/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="source_file_label" type="Label" parent="Panel/MarginContainer/VBoxContainer/HSplitContainer/MarginContainer/VBoxContainer/single_item/GridContainer"]
layout_mode = 2
text = "Aseprite File"

[node name="source_file_value" type="Label" parent="Panel/MarginContainer/VBoxContainer/HSplitContainer/MarginContainer/VBoxContainer/single_item/GridContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
size_flags_horizontal = 3
text = "-"
autowrap_mode = 1

[node name="layer_label" type="Label" parent="Panel/MarginContainer/VBoxContainer/HSplitContainer/MarginContainer/VBoxContainer/single_item/GridContainer"]
layout_mode = 2
text = "Layer"

[node name="layer_value" type="Label" parent="Panel/MarginContainer/VBoxContainer/HSplitContainer/MarginContainer/VBoxContainer/single_item/GridContainer"]
layout_mode = 2
text = "-"

[node name="slice_label" type="Label" parent="Panel/MarginContainer/VBoxContainer/HSplitContainer/MarginContainer/VBoxContainer/single_item/GridContainer"]
layout_mode = 2
text = "Slice"

[node name="slice_value" type="Label" parent="Panel/MarginContainer/VBoxContainer/HSplitContainer/MarginContainer/VBoxContainer/single_item/GridContainer"]
layout_mode = 2
text = "-"

[node name="o_folder_label" type="Label" parent="Panel/MarginContainer/VBoxContainer/HSplitContainer/MarginContainer/VBoxContainer/single_item/GridContainer"]
visible = false
layout_mode = 2
text = "Output folder"

[node name="o_folder_value" type="Label" parent="Panel/MarginContainer/VBoxContainer/HSplitContainer/MarginContainer/VBoxContainer/single_item/GridContainer"]
visible = false
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
size_flags_horizontal = 3
text = "-"

[node name="o_name_label" type="Label" parent="Panel/MarginContainer/VBoxContainer/HSplitContainer/MarginContainer/VBoxContainer/single_item/GridContainer"]
layout_mode = 2
text = "Spritesheet name"

[node name="o_name_value" type="Label" parent="Panel/MarginContainer/VBoxContainer/HSplitContainer/MarginContainer/VBoxContainer/single_item/GridContainer"]
layout_mode = 2
text = "-"

[node name="resource_buttons" type="HFlowContainer" parent="Panel/MarginContainer/VBoxContainer/HSplitContainer/MarginContainer/VBoxContainer/single_item"]
visible = false
layout_mode = 2

[node name="import" type="Button" parent="Panel/MarginContainer/VBoxContainer/HSplitContainer/MarginContainer/VBoxContainer/single_item/resource_buttons"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/normal = SubResource("StyleBoxFlat_dq8di")
text = "Re-Import"

[node name="open_scene" type="Button" parent="Panel/MarginContainer/VBoxContainer/HSplitContainer/MarginContainer/VBoxContainer/single_item/resource_buttons"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/normal = SubResource("StyleBoxFlat_dq8di")
text = "Open Scene"

[node name="scene_buttons" type="HFlowContainer" parent="Panel/MarginContainer/VBoxContainer/HSplitContainer/MarginContainer/VBoxContainer/single_item"]
visible = false
layout_mode = 2

[node name="import_all" type="Button" parent="Panel/MarginContainer/VBoxContainer/HSplitContainer/MarginContainer/VBoxContainer/single_item/scene_buttons"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/normal = SubResource("StyleBoxFlat_dq8di")
text = "Re-Import all"

[node name="open_scene" type="Button" parent="Panel/MarginContainer/VBoxContainer/HSplitContainer/MarginContainer/VBoxContainer/single_item/scene_buttons"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/normal = SubResource("StyleBoxFlat_dq8di")
text = "Open Scene"

[node name="dir_buttons" type="HFlowContainer" parent="Panel/MarginContainer/VBoxContainer/HSplitContainer/MarginContainer/VBoxContainer/single_item"]
visible = false
layout_mode = 2

[node name="import_all" type="Button" parent="Panel/MarginContainer/VBoxContainer/HSplitContainer/MarginContainer/VBoxContainer/single_item/dir_buttons"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/normal = SubResource("StyleBoxFlat_dq8di")
text = "Re-Import all"

[node name="show_dir_in_fs" type="Button" parent="Panel/MarginContainer/VBoxContainer/HSplitContainer/MarginContainer/VBoxContainer/single_item/dir_buttons"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/normal = SubResource("StyleBoxFlat_dq8di")
text = "Show In FileSystem"

[node name="multiple_items" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer/HSplitContainer/MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 3

[node name="multiple" type="Label" parent="Panel/MarginContainer/VBoxContainer/HSplitContainer/MarginContainer/VBoxContainer/multiple_items"]
layout_mode = 2
size_flags_vertical = 6
text = "Multiple items selected
"
horizontal_alignment = 1

[node name="buttons" type="HFlowContainer" parent="Panel/MarginContainer/VBoxContainer/HSplitContainer/MarginContainer/VBoxContainer/multiple_items"]
layout_mode = 2

[node name="import_selected" type="Button" parent="Panel/MarginContainer/VBoxContainer/HSplitContainer/MarginContainer/VBoxContainer/multiple_items/buttons"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/normal = SubResource("StyleBoxFlat_dq8di")
text = "Re-Import all"

[node name="confirmation_warning" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer/HSplitContainer/MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="Panel/MarginContainer/VBoxContainer/HSplitContainer/MarginContainer/VBoxContainer/confirmation_warning"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="warning_message" type="Label" parent="Panel/MarginContainer/VBoxContainer/HSplitContainer/MarginContainer/VBoxContainer/confirmation_warning/MarginContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
autowrap_mode = 2

[node name="buttons" type="HFlowContainer" parent="Panel/MarginContainer/VBoxContainer/HSplitContainer/MarginContainer/VBoxContainer/confirmation_warning"]
layout_mode = 2

[node name="confirm" type="Button" parent="Panel/MarginContainer/VBoxContainer/HSplitContainer/MarginContainer/VBoxContainer/confirmation_warning/buttons"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/normal = SubResource("StyleBoxFlat_dq8di")
text = "Confirm"

[node name="cancel" type="Button" parent="Panel/MarginContainer/VBoxContainer/HSplitContainer/MarginContainer/VBoxContainer/confirmation_warning/buttons"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/normal = SubResource("StyleBoxFlat_dq8di")
text = "Cancel"

[connection signal="close_requested" from="." to="." method="_on_close_requested"]
[connection signal="multi_selected" from="Panel/MarginContainer/VBoxContainer/HSplitContainer/VBoxContainer/Tree" to="." method="_on_tree_multi_selected"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/HSplitContainer/VBoxContainer/buttons/expand_all" to="." method="_on_expand_all_pressed"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/HSplitContainer/VBoxContainer/buttons/collapse_all" to="." method="_on_collapse_all_pressed"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/HSplitContainer/MarginContainer/VBoxContainer/single_item/resource_buttons/import" to="." method="_on_import_pressed"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/HSplitContainer/MarginContainer/VBoxContainer/single_item/resource_buttons/open_scene" to="." method="_on_open_scene_pressed"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/HSplitContainer/MarginContainer/VBoxContainer/single_item/scene_buttons/import_all" to="." method="_on_import_all_pressed"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/HSplitContainer/MarginContainer/VBoxContainer/single_item/scene_buttons/open_scene" to="." method="_on_open_scene_pressed"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/HSplitContainer/MarginContainer/VBoxContainer/single_item/dir_buttons/import_all" to="." method="_on_import_all_pressed"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/HSplitContainer/MarginContainer/VBoxContainer/single_item/dir_buttons/show_dir_in_fs" to="." method="_on_show_dir_in_fs_pressed"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/HSplitContainer/MarginContainer/VBoxContainer/multiple_items/buttons/import_selected" to="." method="_on_import_selected_pressed"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/HSplitContainer/MarginContainer/VBoxContainer/confirmation_warning/buttons/confirm" to="." method="_on_import_confirm_pressed"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/HSplitContainer/MarginContainer/VBoxContainer/confirmation_warning/buttons/cancel" to="." method="_on_import_cancel_pressed"]
